--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "dev-start": "nodemon server.js",
-    "debug":"ndb server.js"
+    "debug": "ndb server.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,13 @@
   },
   "homepage": "https://github.com/mhkasif/shoes#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.0",
+    "nodemailer": "^6.5.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
